<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bluerectangle"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textColor="@color/blue"
            android:textSize="55sp"
            android:textStyle="bold"


            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/camera"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/plane"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            />

    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/navibar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/house"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="15dp"


            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/users"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="15dp"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/marketplace"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="15dp"

            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/bells"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="15dp"

            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/bars"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stories"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/rectangle"
            android:layout_marginStart="15dp"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/rectangle"
            android:layout_marginStart="15dp"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/rectangle"
            android:layout_marginStart="15dp"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:src="@drawable/rectangle"
            android:layout_marginStart="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/solidcircle"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posted"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/gray"
                    />
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/earth"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>





        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/more"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/postshape"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/like"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/laugh"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/heart"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@drawable/divisor"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/likee"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Like"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/comment"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="comment"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/share"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="share"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginEnd="15dp"
            />


    </LinearLayout>


</LinearLayout>
